[package]
name = "jsonrs"
version = "0.1.3"
edition = "2021"
description = "Json parser"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
license = "MIT"
readme = "README"
repository = "https://git.saulv.es/json.rs/"

[lib]
name = "json"
path = "src/lib.rs"
crate-type = [ "lib", "cdylib", "staticlib" ]

[build-dependencies]
cbindgen = { version = "0.24.0", optional = true }

[features]
default = []
bindings = ["dep:cbindgen"]
