[package]
name = "jsonrs"
version = "1.3.0"
edition = "2024"
description = "Json parser"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
license = "GPL-3.0-only"
readme = "README"
repository = "https://github.com/saulvaldelvira/json.rs"

[lib]
name = "json"
path = "src/lib.rs"
crate-type = [ "lib", "cdylib", "staticlib" ]

[build-dependencies.cbindgen]
version = ">=0.24.0"
optional = true
default-features = false

[features]
default = ["std"]
std = []
bindings = ["dep:cbindgen"]
